[package]
name = "comproxity"
version = "0.1.0"
edition = "2021"
description = "Simple Proof of Work (PoW) HTTP proxy"
homepage = "https://progrm-jarvis.ru/comproxity"
repository = "https://github.com/JarvisCraft/comproxity/"
license = "MIT OR Apache-2.0"
keywords = ["http", "proxy", "proof-of-work"]
categories = ["network-programming", "web-programming::http-server"]
include = ["assets/**", "src/**"]

[dependencies]
# Tracing
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
# Runtime
tokio = { version = "1.21.2", features = ["full"] }
# Networling
hyper = { version = "0.14.20", features = ["full"] }
headers = { version = "0.3.8" }
hyper-reverse-proxy = "0.5.1"
hyper-static = { version = "0.1.6", features = ["hashing-sha2"] }
# Security
sha2 = "0.10.6"
jwt = "0.16.0"
hmac = "0.12.1"
# Serialization
serde = { version = "1.0.145", features = ["derive"] }
serde_with = { version = "2.0.1", features = ["time_0_3"] }
# Configuration
configuration = { package = "config", version = "0.13.2" }
# Miscellaneous
time = { version = "0.3.15", features = ["serde"] }
rand = "0.8.5"
ulid = "1.0.0"
compact_str = { version = "0.6.1", features = ["serde"] }
hex = "0.4.3"
smallvec = { version = "1.10.0", features = ["union"] }
# Error handling
thiserror = "1.0.37"
